--- a/Navigation/Profile/ProfileView.xib
+++ b/Navigation/Profile/ProfileView.xib
@@ -8,7 +8,14 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="Navigation" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="Navigation" customModuleProvider="target">
+            <connections>
+                <outlet property="cityLabel" destination="V99-x6-vWK" id="2eB-4J-qHr"/>
+                <outlet property="dateLabel" destination="A49-oR-YEB" id="Juq-sG-xXU"/>
+                <outlet property="nameLabel" destination="DQr-74-gdF" id="VC9-S3-43z"/>
+                <outlet property="textField" destination="EO3-Bx-pNa" id="oLk-mF-Vw8"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="429" height="670"/>
